# tasks/index.js
@@ -1,8 +1,8 @@
 const express = require('express');
 const router = express.Router();
-const ctrl = require('./task.ctrl');
+const ctrl = require('./tasks.ctrl');
 
-router.get('/tasks', ctrl.list);
+router.get('/', ctrl.list);
 router.get('/:taskId', ctrl.show);
 router.delete('/:taskId', ctrl.destroy);
 router.post('/', ctrl.create);
